syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "validate/validate.proto"; use buf first
option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//自应用信息表
service SelfApp {
  //自应用信息表-创建一条数据
  rpc CreateSelfApp(CreateSelfAppReq) returns (CreateSelfAppReply) {
    option (google.api.http) = {
      post: "/admin/v1/self_app/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //自应用信息表-更新一条数据
  rpc UpdateSelfApp(UpdateSelfAppReq) returns (UpdateSelfAppReply) {
    option (google.api.http) = {
      post: "/admin/v1/self_app/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //自应用信息表-更新状态
  rpc UpdateSelfAppStatus(UpdateSelfAppStatusReq) returns (UpdateSelfAppStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/self_app/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //自应用信息表-删除一条数据
  rpc DeleteSelfApp(DeleteSelfAppReq) returns (DeleteSelfAppReply) {
    option (google.api.http) = {
      post: "/admin/v1/self_app/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //自应用信息表-单条数据查询
  rpc GetSelfAppInfo(GetSelfAppInfoReq) returns (GetSelfAppInfoReply) {
    option (google.api.http) = {get: "/admin/v1/self_app/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //自应用信息表-列表数据查询
  rpc GetSelfAppList(GetSelfAppListReq) returns (GetSelfAppListReply) {
    option (google.api.http) = {get: "/admin/v1/self_app/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}
//自应用信息表信息
message SelfAppInfo {
  string id = 1; // ID
	string packageName = 2; // 包名
	string name = 3; // 应用名称
	string description = 4; // 应用描述
	int32 status = 5; // 状态(-1禁用 1启用)
	string createdAt = 6; // 创建时间
	string updatedAt = 7; // 更新时间
}

//请求-自应用信息表-创建一条数据
message CreateSelfAppReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["packageName","name","status"]
    }
  };
  string packageName = 1 [(buf.validate.field).string={min_len: 1, max_len: 255}]; // 包名
	string name = 2 [(buf.validate.field).string={min_len: 1, max_len: 255}]; // 应用名称
	string description = 3 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 9223372036854775807}]; // 应用描述
	int32 status = 4 ; // 状态(-1禁用 1启用)
}

//响应-自应用信息表-创建一条数据
message CreateSelfAppReply {
  	string id = 1; // ID
}

//请求-自应用信息表-更新一条数据
message UpdateSelfAppReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","packageName","name","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // ID
	string packageName = 2 [(buf.validate.field).string={min_len: 1, max_len: 255}]; // 包名
	string name = 3 [(buf.validate.field).string={min_len: 1, max_len: 255}]; // 应用名称
	string description = 4 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 9223372036854775807}]; // 应用描述
	int32 status = 5 ; // 状态(-1禁用 1启用)
}

//响应-自应用信息表-更新一条数据
message UpdateSelfAppReply {}

//请求-自应用信息表-更新状态
message UpdateSelfAppStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // ID
	int32 status = 2 ; // 状态(-1禁用 1启用)
}

//响应-自应用信息表-更新状态
message UpdateSelfAppStatusReply {}

//请求-自应用信息表-删除一条数据
message DeleteSelfAppReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // ID
}

//响应-自应用信息表-删除一条数据
message DeleteSelfAppReply {}

//请求-自应用信息表-单条数据查询
message GetSelfAppInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // ID
}

//响应-自应用信息表-单条数据查询
message GetSelfAppInfoReply {
  SelfAppInfo info = 1;
}

//请求-自应用信息表-列表数据查询
message GetSelfAppListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1[(buf.validate.field).int32={gte: 1}]; //页码
  int32 pageSize = 2[(buf.validate.field).int32={gte: 1, lte: 1000}]; //页数
}

//响应-自应用信息表-列表数据查询
message GetSelfAppListReply {
  int32 total = 1; //总数
  repeated SelfAppInfo list = 2; // 列表数据
}

